testsuite/tests/parse-errors/unclosed_paren_module_expr5.ml
(* TEST
* setup-ocamlc.byte-build-env
** ocamlc.byte
ocamlc_byte_exit_status = "2"
*** check-ocamlc.byte-output
*)

module M = (val 3
